# claude-codex-auto-handoff

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  task-1.1-brief.md  task-1.1-report.md  task-1.1-review.diff  task-1.2-brief.md  task-4.3-report.md
commands/: handoff-checkpoint.md  handoff-config.md  handoff-create.md  handoff-preview.md  handoff-skip.md  handoff-status.md  handoff.md
config/: defaults.json
core/: cli.mjs
core/capsule/: approval.mjs  clear.mjs  inject-track.mjs  lifecycle.mjs  store.mjs
core/hooks/: handoff.mjs  session-start.mjs  stop.mjs  trigger.mjs
core/lib/: config-edit.mjs  config.mjs  dedupe.mjs  fingerprint.mjs  fsx.mjs  gitctx.mjs  hash.mjs  hook-output.mjs  i18n.mjs  notify.mjs  redact.mjs  rootcheck.mjs  sessions.mjs  validate.mjs
core/monitors/: usage-monitor.mjs
core/project/: manifest.mjs
core/sensors/: claude-statusline.mjs  codex-appserver.mjs  codex-jsonl.mjs  ratelimit.mjs  samples.mjs
core/setup/: claude-statusline.mjs
crates/ai-handoff-cli/: Cargo.toml
crates/ai-handoff-cli/src/: lib.rs  main.rs
crates/ai-handoff-cli/src/commands/: account.rs  autostart.rs  checkpoint.rs  config.rs  daemon.rs  dashboard.rs  doctor.rs  handoff.rs  hook.rs  install.rs  launcher.rs  mod.rs  statusline.rs  tui.rs  uninstall.rs  usage.rs
crates/ai-handoff-cli/tests/: doctor_checkpoint.rs  e2e_hook_daemon.rs  hook_offline.rs  install_dry_run.rs  uninstall.rs
crates/ai-handoff-core/: Cargo.toml
crates/ai-handoff-core/src/: account.rs  capsule.rs  config.rs  dashboard.rs  fingerprint.rs  hook_event.rs  lib.rs  paths.rs  redaction.rs  secure_fs.rs  sensor.rs  trigger.rs
crates/ai-handoff-core/src/install/: claude.rs  claude_statusline.rs  codex_config.rs  codex_hooks.rs  detect.rs  duplicate.rs  mod.rs  plugin.rs  state.rs
crates/ai-handoff-core/tests/: secure_fs.rs
crates/ai-handoff-daemon/: Cargo.toml
crates/ai-handoff-daemon/src/: dedupe.rs  lib.rs  main.rs  router.rs  store.rs
crates/ai-handoff-daemon/tests/: config_wiring.rs  serve.rs
crates/ai-handoff-ipc/: Cargo.toml
crates/ai-handoff-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/ai-handoff-tui/: Cargo.toml
crates/ai-handoff-tui/src/: account_login.rs  app.rs  capsule_ops.rs  edit.rs  lib.rs  viewmodel.rs
docs/: README.ja.md  README.ko.md  README.zh.md  account-add-oauth-design.md  account-switching-oauth-redesign.md
docs/advanced/: README.ja.md  README.ko.md  README.md  README.zh.md
docs/v2/: mvp-acceptance.md
locales/: app.yml
monitors/: monitors.json
scripts/: install.ps1  install.sh  usage-monitor.mjs  validate-package.mjs
skills/handoff-checkpoint/: SKILL.md
skills/handoff-clear/: SKILL.md
skills/handoff-config/: SKILL.md
skills/handoff-doctor/: SKILL.md
skills/handoff-ratelimit/: SKILL.md
skills/handoff-recent/: SKILL.md
tests/: approval.test.mjs  bidirectional-hooks.e2e.test.mjs  claude-setup.test.mjs  claude-statusline.test.mjs  cli-doctor.test.mjs  cli-handoff.test.mjs  cli-hooks.test.mjs  codex-appserver.e2e.test.mjs  codex-jsonl.test.mjs  config-concurrency.test.mjs  config-edit.test.mjs  config.test.mjs  dedupe.test.mjs  doctor-audit.test.mjs  fingerprint-redact.test.mjs  fingerprint.test.mjs  fsx.test.mjs  gitctx.test.mjs  handoff-approval.test.mjs  handoff-clear.test.mjs  handoff-consume.test.mjs  handoff-query.test.mjs  hash.test.mjs  hook-output.test.mjs  i18n-ask.test.mjs  i18n.test.mjs  lifecycle.test.mjs  manifest.test.mjs  notify.test.mjs  packaging.test.mjs  ratelimit.test.mjs  redact.test.mjs  rootcheck.test.mjs  samples.test.mjs  session-start.test.mjs  sessions.test.mjs  skills-present.test.mjs  stop-ask-picker.test.mjs  stop-i18n.test.mjs  stop.test.mjs  (+4 more)
(+14 files in other folders)
