[workspace]
resolver = "2"
members = [
    "crates/ai-handoff-core",
    "crates/ai-handoff-ipc",
    "crates/ai-handoff-daemon",
    "crates/ai-handoff-cli",
]

[workspace.package]
version = "2.0.0-mvp"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
