[package]
name = "ai-handoff-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ai-handoff"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
directories.workspace = true
ai-handoff-core = { path = "../ai-handoff-core" }
ai-handoff-ipc = { path = "../ai-handoff-ipc" }
ai-handoff-daemon = { path = "../ai-handoff-daemon" }

[dev-dependencies]
tempfile.workspace = true
toml_edit = "0.22"
