[package]
name = "ai-handoff-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ai-handoff-daemon"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
tracing.workspace = true
ai-handoff-core = { path = "../ai-handoff-core" }
ai-handoff-ipc = { path = "../ai-handoff-ipc" }

[dev-dependencies]
tempfile.workspace = true
