[package]
name = "ai-handoff-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
ai-handoff-core = { path = "../ai-handoff-core" }

[dev-dependencies]
tempfile.workspace = true
