[package]
name = "ai-handoff-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust-i18n = { workspace = true }
ai-handoff-core = { path = "../ai-handoff-core" }
ai-handoff-usage = { path = "../ai-handoff-usage" }

[dev-dependencies]
tempfile = { workspace = true }
